[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
utoipa = "5.3.0"
utoipa-swagger-ui = { version = "8.1.0", features = ["actix-web"] }
tokio = "1.42.0"
log = "0.4.22"
env_logger = "0.11.6"
uuid = { version = "1.11.0", features = ["v4"] }    # Passende aktuelle Version
